Add extended paste command

--- a/src/Alloy.Sample/Web.config
+++ b/src/Alloy.Sample/Web.config
@@ -254,6 +254,7 @@
       </sizePresets>
     </imageEditor></episerver>
   <episerver.framework>
+    <clientResources debug="true" />
     <appData basePath="App_Data" />
     <scanAssembly forceBinFolderScan="true" />
     <virtualRoles addClaims="true">
@@ -361,6 +362,7 @@
       <add name="Shell" />
       <add name="CMS" />
       <add name="EPiServer.Cms.TinyMce" />
+      <add name="extended-content-copy" />
     </protectedModules>
   </episerver.shell>
   <connectionStrings>
