--- a/src/Alloy.Sample/Alloy.Sample.csproj
+++ b/src/Alloy.Sample/Alloy.Sample.csproj
@@ -339,7 +339,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ExtendedContentCopy\ExtendedContentCopy.csproj">
+      <Project>{38802d34-f169-4df2-9ed9-8583bb1ac72a}</Project>
+      <Name>ExtendedContentCopy</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="ClientResources\Images\icons\layoutIcons24x24.png" />
     <Content Include="ClientResources\Scripts\Editors\StringList.js" />
@@ -405,6 +410,8 @@
     <Content Include="modules\_protected\CMS\web.config" />
     <Content Include="modules\_protected\CMS\CMS.zip" />
     <Content Include="module.config" />
+    <Content Include="modules\_protected\extended-content-copy\web.config" />
+    <Content Include="modules\_protected\extended-content-copy\module.config" />
     <None Include="packages.config" />
     <Content Include="Views\_viewstart.cshtml" />
     <Content Include="Views\VideoFile\Index.cshtml" />
