--- a/src/Alloy.Sample/modules/_protected/extended-content-copy/module.config
+++ b/src/Alloy.Sample/modules/_protected/extended-content-copy/module.config
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<module clientResourceRelativePath="1.0.0">
-  <!--type="ExtendedContentCopy.EditMode.ExtendedContentCopyModuleViewModelModule, ExtendedContentCopy"-->
+<module clientResourceRelativePath="1.0.0" type="ExtendedContentCopy.EditMode.ExtendedContentCopyModuleViewModelModule, ExtendedContentCopy">
   <assemblies>
     <add assembly="ExtendedContentCopy" />
   </assemblies>
