Implement paste dialog

--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /src/Alloy.Sample/App_Data/blobs
+/src/Alloy.Sample/modules/_protected/extended-content-copy/1.0.0/scripts/.idea
