Refactor plugin options

--- a/src/Alloy.Sample/Alloy.Sample.csproj
+++ b/src/Alloy.Sample/Alloy.Sample.csproj
@@ -269,6 +269,7 @@
     <Compile Include="Business\IModifyLayout.cs" />
     <Compile Include="Business\Initialization\BundleConfig.cs" />
     <Compile Include="Business\Initialization\CustomizedRenderingInitialization.cs" />
+    <Compile Include="Business\Initialization\ExtendedContentCopyInitialization.cs" />
     <Compile Include="Business\Initialization\DependencyResolverInitialization.cs" />
     <Compile Include="Business\Initialization\DisplayModesInitialization.cs" />
     <Compile Include="Business\Initialization\DisplayRegistryInitialization.cs" />
