--- a/src/ExtendedContentCopy.Tests/ExtendedContentCopy.Tests.csproj
+++ b/src/ExtendedContentCopy.Tests/ExtendedContentCopy.Tests.csproj
@@ -56,7 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="PredefinedOptionsMergerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExtendedContentCopy\ExtendedContentCopy.csproj">
+      <Project>{38802d34-f169-4df2-9ed9-8583bb1ac72a}</Project>
+      <Name>ExtendedContentCopy</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
